# axe

./: .gitignore  CHANGELOG.md  README.md  TODO.md  axe  delete_pyo_pyc.py  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
axe_cli/: __init__.py  cli.py
axe_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
packaging/: axe-bundle-entrypoint  axe-entrypoint
scripts/: prepare_offline_bundle.sh  prepare_package_root.sh  write_nfpm_config.py
tests/: test_axe.py
