[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "axe-cli"
version = "0.1.1"
description = "Batch SSH and SCP helper built on pexpect"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "axe contributors" }]
dependencies = ["pexpect>=4.8,<5"]

[project.scripts]
axe = "axe_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["axe_cli"]
